--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@emailjs/browser": "^4.3.3",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.1",
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
+    "flowbite": "^2.3.0",
     "framer-motion": "^11.0.24",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-tilt": "^1.0.2",
