--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.1",
     "@reduxjs/toolkit": "^2.2.2",
+    "@types/aos": "^3.0.7",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
     "framer-motion": "^11.0.24",
